# django-import-data

./: .gitignore  LICENSE  README.rst  pyproject.toml  setup.cfg
django_import_data/: __init__.py  apps.py  converters.py  fieldmap.py  formmap.py  formmapset.py  managers.py  mermaid.py  mixins.py  models.py  numranges.py  querysets.py  test_fieldmap.py  test_formmap.py  utils.py  views.py
django_import_data/migrations/: 0001_initial.py  0002_auto_20190618_1624.py  0002_fileimportattempt_imported_by.py  0003_auto_20190618_1629.py  0003_rowdata_headers.py  0004_auto_20190619_1226.py  0004_rowdata_errors.py  0005_auto_20190619_1532.py  0005_fileimportattempt_ignored_headers.py  0006_auto_20190702_1318.py  0006_file_import_batch.py  0007_auto_20190702_1353.py  0007_remove_fileimportbatch_is_active.py  0008_auto_20190214_0249.py  0008_auto_20190702_1650.py  0009_fileimportbatch_errors.py  0009_remove_modelimportattempt_acknowledged.py  0010_auto_20190705_1323.py  0011_auto_20190705_1351.py  0012_auto_20190705_1356.py  0013_auto_20190705_1409.py  0014_auto_20190705_1412.py  0015_auto_20190705_1512.py  0016_auto_20190708_1458.py  0017_auto_20190708_1504.py  0018_remove_modelimportattempt_row_data.py  0019_rowdata_status.py  0020_auto_20190712_1156.py  0021_remove_fileimporter_current_status.py  0022_auto_20190716_1542.py
django_import_data/templates/: changed_files_dashboard.html  field_map_as_mermaid.html  fileimportattempt_detail.html  fileimportattempt_list.html  form_map_as_mermaid.html  genericaudit_detail.html  (+15 more)
example_project/: django_import_data.ipynb
(+27 files in other folders)
