[tool.poetry]
name = "django_import_data"
version = "0.1.0"
description = "Simplifies imports of messy external data into Django"
authors = ["Thomas Chamberlin <tchamber@nrao.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
tqdm = "^4.32"

[tool.poetry.dev-dependencies]
Django = "^2"
django_extensions = "^2.1"
psycopg2-binary = "^2.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
