[metadata]
name = django-import-data
author = Thomas Chamberlin
author_email = thomaswchamberlin@gmail.com
description = Framework for importing external data into Django
description-file = README.rst
description-content-type = text/x-rst; charset=UTF-8
; home-page = http://github.com/GreenBankObservatory/django-settings-diff
; project-urls =
;     Source Code = http://github.com/GreenBankObservatory/django-settings-diff
license = MIT
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Programming Language :: Python

[files]
packages = django_import_data
